feat(java9): a world of hurt