@@ -3,12 +3,9 @@ plugins {
 }
 
 dependencies {
-    implementation(project(":product-api"))
-    implementation(project(":product-impl"))
-    implementation(project(":notification-api"))
-    implementation(project(":notification-impl"))
-    implementation(project(":inventory-api"))
-    implementation(project(":inventory-impl"))
+    implementation(project(":product"))
+    implementation(project(":notification"))
+    implementation(project(":inventory"))
 
     implementation("org.springframework.modulith:spring-modulith-starter-core")
     implementation("org.springframework.modulith:spring-modulith-events-api")
@@ -21,6 +18,14 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.modulith:spring-modulith-starter-test")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+}
+
+tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun") {
+    jvmArgs = listOf(
+        "--add-opens", "com.gofore.springmodulithdemo.product/com.gofore.springmodulithdemo.product.impl=ALL-UNNAMED",
+        "--add-opens", "com.gofore.springmodulithdemo.inventory/com.gofore.springmodulithdemo.inventory.impl=ALL-UNNAMED",
+        "--add-opens", "com.gofore.springmodulithdemo.app/com.gofore.springmodulithdemo=ALL-UNNAMED"
+    )
 }
 
 
